--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,6 +53,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
         <!-- SPRINGDOC -->
         <dependency>
@@ -93,12 +97,19 @@
                             <generatorName>spring</generatorName>
                             <apiPackage>dev.zalaya.overkill.api</apiPackage>
                             <modelPackage>dev.zalaya.overkill.api.model</modelPackage>
+                            <modelNameSuffix>Dto</modelNameSuffix>
                             <output>${project.build.directory}/generated-sources/openapi</output>
                             <configOptions>
                                 <interfaceOnly>true</interfaceOnly>
                                 <useTags>true</useTags>
                                 <useSpringBoot3>true</useSpringBoot3>
                                 <dateLibrary>java8</dateLibrary>
+                                <delegatePattern>true</delegatePattern>
+                                <additionalModelTypeAnnotations>
+                                    @lombok.Builder
+                                    @lombok.AllArgsConstructor
+                                    @lombok.NoArgsConstructor
+                                </additionalModelTypeAnnotations>
                             </configOptions>
                         </configuration>
                     </execution>
